--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-
+body{
+  font-family: 'Poppins';
+}
 .landing{
     background-image: url('assets/backgrounds/landing.jpg');
     
@@ -65,4 +67,26 @@ h4{
   background-image: url('assets/foodtop/dinner.jpg');
   width: 300px;
   height: 200px; 
+}
+.gallery-container{
+  display: flex;
+  flex-wrap: wrap;
+  border: 20px solid whitesmoke;
+  float: left;
+  width: 490px;
+  height: 200px;
+}
+.fast-food h1,h2,p,button{
+   position: relative;
+   left: 70px;
+ }
+ button{
+   color: #F15A29;
+   background-color: white;
+   border: solid #F15A29;
+   width: 200px;
+   height: 50px;
+ }
+.drinks-gallery img{
+    
 }
