--- a/style.css
+++ b/style.css
@@ -87,6 +87,27 @@ h4{
    width: 200px;
    height: 50px;
  }
-.drinks-gallery img{
-    
+
+.drinks img{
+  float: right;
+  width: 250px;
+  height: 350px;
+  position: relative;
+  top: 200px;
+  right: 50px;
+  border: 20px solid whitesmoke;
+}
+.drinks-items{
+  position: relative;
+  right: 50px;
+  top: 300px;
+}
+.drinks h1{
+ float: left;
+}
+.menu-container{
+  background-image: url('assets/backgrounds/foodsBg.jpg');
+  margin-top: 450px;
+  width:1300px;
+  height: 600px;
 }
